# gh-watch

./: .gitignore  AGENT.md  Cargo.toml  README.md  README_ja.md  config.example.toml
.github/scripts/: junit_test_items_summary.py
.github/scripts/tests/: test_junit_test_items_summary.py
.github/scripts/tests/fixtures/: sample-junit.xml
.github/workflows/: release.yml  test-and-coverage.yml
src/: cli.rs  config.rs  lib.rs  main.rs  ports.rs
src/app/: mod.rs  notification_test.rs  poll_once.rs  watch_loop.rs
src/app/watch_loop/: browser.rs  mod.rs  poll_result.rs  poll_state.rs  stream_controller.rs
src/app/watch_loop/stream_controller/: tests.rs
src/cli/: args.rs  mod.rs  state.rs
src/cli/commands/: check.rs  completion.rs  config.rs  guide.rs  init.rs  mod.rs  once.rs  watch.rs
src/domain/: decision.rs  events.rs  failure.rs  mod.rs
src/infra/: gh_client.rs  mod.rs  state_sqlite.rs
src/infra/gh_client/: client.rs  mod.rs  models.rs  normalize.rs
src/infra/notifier/: backend.rs  desktop.rs  linux.rs  macos.rs  macos_osascript.rs  message.rs  mod.rs  noop.rs  process_error.rs  windows.rs  wsl_burnttoast.rs
src/ui/: tui.rs
src/ui/tui/: input.rs  layout.rs  mod.rs  model.rs  presentation.rs  render.rs
src/ui/tui/presentation/: tests.rs
tests/: commands_cmd_test.rs  completion_cmd_test.rs  config_cmd_test.rs  config_test.rs  domain_decision_test.rs  gh_client_pagination_test.rs  gh_normalization_test.rs  init_cmd_test.rs  notification_test_usecase_test.rs  notifier_test.rs  once_report_doctor_cmd_test.rs  poll_once_test.rs  state_sqlite_test.rs  tui_state_test.rs  watch_auth_fail_test.rs  watch_e2e_test.rs
tests/fixtures/: issue_comments.json  issues.json  pulls.json  review_comments.json
