[package]
name = "gh-watch"
version = "0.1.0"
edition = "2021"
description = "Reliable GitHub PR/Issue watcher with desktop notifications and a TUI timeline"
license = "UNLICENSED"
repository = "https://github.com/6uclz1/gh-watch"
homepage = "https://github.com/6uclz1/gh-watch"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["github", "notifications", "cli", "tui", "watcher"]

[lib]
name = "gh_watch"
path = "src/lib.rs"

[[bin]]
name = "gh-watch"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = { version = "0.28", features = ["event-stream"] }
directories = "5"
futures-util = "0.3"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
